--- a/App/templates/App/home.html
+++ b/App/templates/App/home.html
@@ -10,7 +10,7 @@
                     <p class="lead fw-normal text-white-50 mb-4">Get Realtime hospital Beds Availability Status. Search
                         hospital According to your locality </p>
                     <div class="d-grid gap-3 d-sm-flex justify-content-sm-center justify-content-xl-start">
-                        <a class="btn btn-primary btn-lg px-4 me-sm-3" href="/results/all">Get Started</a>
+                        <a class="btn btn-primary btn-lg px-4 me-sm-3" href="/results/">Get Started</a>
                         <a class="btn btn-outline-light btn-lg px-4" href="#!">Learn More</a>
                     </div>
                 </div>
