--- a/App/templates/App/hospitaldetail.html
+++ b/App/templates/App/hospitaldetail.html
@@ -87,7 +87,7 @@
                 <div class="col mb-5 mb-5 mb-xl-0">
                     <div class="text-center">
                         <img class="img-fluid rounded-circle mb-4 px-4"
-                             src="https://dummyimage.com/150x150/ced4da/6c757d" alt="...">
+                             src="/media/{{x.image}}" alt="...">
                         <h5 class="fw-bolder">{{x.name}}</h5>
                         <div class="fst-italic text-muted">{{x.speciality}}</div>
                     </div>
@@ -110,7 +110,7 @@
                 <div class="col mb-5 mb-5 mb-xl-0">
                     <div class="text-center">
                         <img class="img-fluid rounded-circle mb-4 px-4"
-                             src="https://dummyimage.com/150x150/ced4da/6c757d" alt="...">
+                             src="/media/{{x.image}}" width="150" height="150" alt="/media/">
                         <h5 class="fw-bolder" style="color:white">{{x.name}}</h5>
                         <div class="fst-italic text-muted">{{x.contact}}</div>
                     </div>
