--- a/App/templates/App/signup.html
+++ b/App/templates/App/signup.html
@@ -1,7 +1,16 @@
 {% extends "App/base.html" %}
 {% block body %}
+{% if messages %}
+
+    {% for message in messages %}
+    <div class="alert alert-{{ message.tags }}" role="alert">
+        {{ message }}
+    </div>
+    {% endfor %}
+    {% endif %}
 
 <div class="container d-block mx-auto d-flex justify-content-center my-5">
+
     <script type="text/javascript" src='https://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.8.3.min.js'></script>
 <!--    <script type="text/javascript"-->
 <!--            src='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.0.3/js/bootstrap.min.js'></script>-->
