--- a/App/templates/App/results.html
+++ b/App/templates/App/results.html
@@ -7,8 +7,7 @@
             <div class="col-lg-8 col-xl-6">
                 <div class="text-center">
                     <h2 class="fw-bolder">Hospitals Near You</h2>
-                    <p class="lead fw-normal text-muted mb-5">Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                        Eaque fugit ratione dicta mollitia. Officiis ad.</p>
+                    <p class="lead fw-normal text-muted mb-5">See Occupancy Status and Book</p>
                 </div>
             </div>
         </div>
